[package]
name = "tay"
version = "0.1.0"
authors = ["Mesut Tasci <mst.tasci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.1.0"


[dev-dependencies]
pretty_assertions = "0.6.1"
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false