[package]
name = "tay"
version = "0.2.0"
authors = ["Mesut Tasci <mst.tasci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.3.0"
criterion = "0.4.0"
crossbeam-utils = "0.8.7"

[[bench]]
name = "bench_main"
harness = false
